// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsertCar 1`] = `
Object {
  "keys": Array [
    "Q:Dynamic1________[\\"car\\"]",
    "Q:Dynamic3________[null]",
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Static1_________[]",
  ],
  "sets": Array [
    Object {
      "set": "A:Complex2________",
    },
    Object {
      "set": "A:Complex1________",
    },
    Object {
      "set": "A:Dynamic2________",
    },
  ],
}
`;

exports[`InsertDriver 1`] = `
Object {
  "keys": Array [],
  "sets": Array [],
}
`;

exports[`InsertTruckWithDriver 1`] = `
Object {
  "keys": Array [
    "Q:Dynamic1________[\\"truck\\"]",
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Sorted1_________[]",
    "Q:Static2_________[]",
  ],
  "sets": Array [
    Object {
      "set": "A:Complex2________",
    },
    Object {
      "set": "A:Complex1________",
    },
    Object {
      "set": "A:Dynamic2________",
    },
  ],
}
`;

exports[`RemoveCar 1`] = `
Object {
  "sets": Array [
    Object {
      "set": "P:0000000000000000000000a1",
    },
    Object {
      "set": "O:0000000000000000000000a1",
    },
  ],
}
`;

exports[`RemoveHenry 1`] = `
Object {
  "sets": Array [
    Object {
      "set": "P:0000000000000000000000d1",
    },
    Object {
      "set": "O:0000000000000000000000d1",
    },
  ],
}
`;

exports[`RemoveTruck 1`] = `
Object {
  "sets": Array [
    Object {
      "set": "P:0000000000000000000000b1",
    },
    Object {
      "set": "O:0000000000000000000000b1",
    },
  ],
}
`;

exports[`UpdateAllPrices 1`] = `
Object {
  "keys": Array [
    "Q:Dynamic1________[\\"bus\\"]",
    "Q:Dynamic1________[\\"car\\"]",
    "Q:Dynamic1________[\\"truck\\"]",
    "Q:Sorted1_________[]",
    "Q:Static2_________[]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a1\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a2\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a3\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a4\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000b1\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000b2\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000b3\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000b4\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000c1\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000c2\\"}]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000c3\\"}]",
  ],
  "sets": Array [
    Object {
      "set": "A:Targeted1_______",
    },
    Object {
      "set": "A:Complex2________",
    },
  ],
}
`;

exports[`UpdateBusRoutes 1`] = `
Object {
  "keys": Array [
    "Q:Dynamic3________[null]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000c1\\"}]",
  ],
  "sets": Array [
    Object {
      "set": "A:Targeted1_______",
    },
    Object {
      "set": "A:Dynamic2________",
    },
  ],
}
`;

exports[`UpdateCarDriver 1`] = `
Object {
  "keys": Array [
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a2\\"}]",
  ],
  "sets": Array [],
}
`;

exports[`UpdateCarPrice 1`] = `
Object {
  "keys": Array [
    "Q:Dynamic1________[\\"car\\"]",
    "Q:Sorted1_________[]",
    "Q:Static2_________[]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a1\\"}]",
  ],
  "sets": Array [
    Object {
      "set": "A:Targeted1_______",
    },
    Object {
      "set": "A:Complex2________",
    },
  ],
}
`;

exports[`UpdateCarToBus 1`] = `
Object {
  "keys": Array [
    "Q:Static1_________[]",
    "Q:Unique1_________[{\\"$oid\\":\\"0000000000000000000000a1\\"}]",
  ],
  "sets": Array [
    Object {
      "set": "A:Targeted1_______",
    },
    Object {
      "set": "A:Complex1________",
    },
  ],
}
`;

exports[`UpdateHenrySalary 1`] = `
Object {
  "keys": Array [],
  "sets": Array [
    Object {
      "filter": "Populated1______",
      "set": "P:0000000000000000000000d1",
    },
  ],
}
`;

exports[`UpdateJohnName 1`] = `
Object {
  "keys": Array [],
  "sets": Array [
    Object {
      "filter": "Populated2______",
      "set": "P:0000000000000000000000d2",
    },
    Object {
      "filter": "Populated1______",
      "set": "P:0000000000000000000000d2",
    },
  ],
}
`;

exports[`UpsertCarViaPrice 1`] = `
Object {
  "keys": Array [
    "Q:Dynamic1________[\\"car\\"]",
    "Q:Dynamic2________[null]",
    "Q:Populated1______[]",
    "Q:Populated2______[]",
    "Q:Sorted1_________[]",
    "Q:Static1_________[]",
    "Q:Static2_________[]",
  ],
  "sets": Array [
    Object {
      "set": "A:Complex2________",
    },
    Object {
      "set": "A:Complex1________",
    },
  ],
}
`;
